MINOR: Code review feedback